about to add backend with templating

--- a/public/css/grid.css
+++ b/public/css/grid.css
@@ -34,7 +34,8 @@ body, html, .content { height:100%; }
 
 #indexInput {
     width: 4em;
-}
+    text-align: center;
+} 
 
 .btn-char {
     width: 2em;
@@ -44,4 +45,16 @@ body, html, .content { height:100%; }
 .state-text {
     font: bold 30px sans-serif;
     text-anchor: middle;
+}
+
+svg text {
+    cursor: default;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+svg text::selection {
+    background: none;
 }
